--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "dotenv": "^10.0.0",
     "next": "11.1.2",
     "nodemailer": "^6.7.0",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "simple-react-lightbox": "^3.6.9-0"
   },
   "devDependencies": {
     "eslint": "8.1.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "webpack": "^5.62.1"
   }
 }
